tests/ui/const-generics/sneaky-array-repeat-expr.stderr
error: constant expression depends on a generic parameter
  --> $DIR/sneaky-array-repeat-expr.rs:11:20
   |
LL |     let bar = [(); <()>::Assoc];
   |                    ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to 1 previous error

